Liberando SecurityConfig para testes e atualizando Admin